--- a/web/views/shared/header.html
+++ b/web/views/shared/header.html
@@ -169,7 +169,7 @@
                           Tipo de transacciones</a>
                   </li>
                   <li>
-                      <a href="http://localhost:8080/SisAlcanciaFeliz/views/TipoCuenta.jsp">
+                      <a href="TipoCuentaController?accion=Listar Tipo de Cuentas">
                           Tipo de cuentas</a>
                   </li>
                 </ul>
